@@ -93,6 +93,7 @@ importFrom(stats,aov)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
+importFrom(stats,cor)
 importFrom(stats,dbinom)
 importFrom(stats,df.residual)
 importFrom(stats,dnorm)
